# parallel_programming_open_source

./: .gitignore  CMakeLists.txt  README.md  main.f90  test.f90
lab00/: Makefile  Makefile.bat  clean.bat  make.ps1  readme.txt
lab00/src/: quadequation.f90  quadequation.mod  summation.f90  summation.mod
lab00/test/: quadequation.mod  summation.mod  test_quad.f90  test_sum.f90  test_sum_omp.f90
lab01/: Makefile  Makefile.bat  old_main.f90
lab01/src/: calc_array_bounds.f90  calc_array_bounds.mod  matrix_multiplication.f90  quicksort.f90
lab01/test/: test_array_bounds.f90  test_matmul.f90  test_quicksort.f90
lab01_new/: main  main.f90
lab01_new/.ipynb_checkpoints/: Visualization-checkpoint.ipynb
lab01_new/ex1/: Visualization.ipynb  ex1.f90  ex1_point3.f90  ex1_points12.f90  plot.py
lab01_new/ex2/: different_threads_parse_ex2.f90  ex2.f90  ex2_point1.f90  ex2_point4.f90  main.f90  main_point1.f90  main_point2.f90  main_point4.f90  main_point5.f90  test.f90  test_point5.f90
lab01_new/ex3/: ex3.f90  main.f90  speed_test.f90
lab01_new/ex4/: ex4.f90  main.f90  test.f90
lab02/: a.out  reduction.mod  test_reduction.f90
lab03/: CMakeLists.txt  ex1.f90  ex2.f90  ex3.f90  ex4.f90  ex5.f90  frequency.txt  main.f90
lab03/lab03-stud/: make.ps1  plot_birthdays_rate.py  plot_coin.py  readme.md
lab03/lab03-stud/test/: test_coin.f90  test_galton.f90  test_montyhall.f90  test_random_walk.f90
lab04/: class_area.mod  ex1.f90  ex2.f90  lab04_ex2_main  montecarlo.mod
lab04/lab04-stud/: Makefile  Makefile.bat  plot_area.py
lab04/lab04-stud/src/: class_area.f90  montecarlo.f90
lab04/lab04-stud/test/: area.f90
test1/: a.out  testing.f90
